; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_process_ctl.c_fpm_pctl_kill.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_process_ctl.c_fpm_pctl_kill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGTERM = common dso_local global i32 0, align 4
@SIGSTOP = common dso_local global i32 0, align 4
@SIGCONT = common dso_local global i32 0, align 4
@SIGQUIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fpm_pctl_kill(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %15 [
    i32 128, label %7
    i32 129, label %9
    i32 131, label %11
    i32 130, label %13
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @SIGTERM, align 4
  store i32 %8, i32* %5, align 4
  br label %16

9:                                                ; preds = %2
  %10 = load i32, i32* @SIGSTOP, align 4
  store i32 %10, i32* %5, align 4
  br label %16

11:                                               ; preds = %2
  %12 = load i32, i32* @SIGCONT, align 4
  store i32 %12, i32* %5, align 4
  br label %16

13:                                               ; preds = %2
  %14 = load i32, i32* @SIGQUIT, align 4
  store i32 %14, i32* %5, align 4
  br label %16

15:                                               ; preds = %2
  br label %16

16:                                               ; preds = %15, %13, %11, %9, %7
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @kill(i32 %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @kill(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
